load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "common",
    srcs = [
        "common.cc",
    ],
    hdrs = [
        "common.h",
    ],
    deps = [
        "//pelton",
        "@com_github_gflags_gflags//:gflags",
        "@com_google_googletest//:gtest",
        "@glog",
    ],
)

cc_test(
    name = "lobsters",
    timeout = "long",
    srcs = [
        "lobsters.cc",
    ],
    data = [
        "//tests/data:lobsters-data",
    ],
    malloc = "@com_google_tcmalloc//tcmalloc",
    deps = [
        ":common",
    ],
)

cc_test(
    name = "medical",
    srcs = [
        "medical.cc",
    ],
    data = [
        "//tests/data:medical-chat-data",
    ],
    malloc = "@com_google_tcmalloc//tcmalloc",
    deps = [
        ":common",
    ],
)
