[package]
name = "pelton-memcached"
version = "0.1.0"
authors = ["Kinan Dak Albab"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.32.2"

[[bin]]
name = "mysql_proxy"
path = "src/main.rs"

[package.metadata.raze]
workspace_path = "//cargo"
genmode = "Remote"
# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[package.metadata.raze.crates.bindgen.'0.32.2']
default_gen_buildrs = true
extra_aliased_targets = [
    "cargo_bin_bindgen"
]
