load("@rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
    name = "benchmark",
    srcs = [
        "src/main.rs",
        "src/backend.rs",
        "src/db.rs",
        "src/models.rs",
        "src/generator.rs",
        "src/workload.rs",
        "src/backend/sql.rs",
        "src/backend/hybrid.rs",
    ],
    compile_data = [
        "data/schema.sql",
        "data/mysql-schema.sql",
    ],
    deps = [
        "//cargo:clap",
        "//cargo:mysql",
        "//cargo:rand",
        "//cargo:memcached_rs",
    ],
)
