load("@rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
    name = "benchmark",
    srcs = [
        "src/main.rs",
        "src/backend.rs",
        "src/db.rs",
        "src/models.rs",
        "src/generator.rs",
        "src/workload.rs",
        "src/backend/hybrid.rs",
        "src/backend/mariadb.rs",
        "src/backend/pelton.rs",
        "src/backend/simulate.rs",
    ],
    compile_data = [
        "data/schema.sql",
        "data/mysql-schema.sql",
    ],
    deps = [
        "//cargo:clap",
        "//cargo:mysql",
        "//cargo:rand",
        "//cargo:memcached_rs",
        "//cargo:rand_distr",
    ],
)
