load("@rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
    name = "benchmark",
    srcs = [
        "src/backend.rs",
        "src/backend/hybrid.rs",
        "src/backend/mariadb.rs",
        "src/backend/pelton.rs",
        "src/backend/simulate.rs",
        "src/db.rs",
        "src/generator.rs",
        "src/main.rs",
        "src/models.rs",
        "src/workload.rs",
    ],
    compile_data = [
        "data/schema.sql",
        "data/schema-owners.sql",
        "data/mysql-schema.sql",
    ],
    deps = [
        "//cargo:clap",
        "//cargo:memcached_rs",
        "//cargo:mysql",
        "//cargo:rand",
        "//cargo:rand_distr",
    ],
)
