[package]
name = "ownCloud"
version = "0.0.1"
authors = ["Justus Adam <dev@justus.science"]

[dependencies]
mysql = "20.1.0"
rand = "0.8.4"
rand_distr = "0.4.3"
clap = "2.34.0"
memcached-rs = "0.4.2"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[package.metadata.raze]
workspace_path = "//cargo"
genmode = "Remote"
# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
