[package]
name = "vote-benchmark"
version = "0.0.1"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>", "Ishan Sharma <isharm11@brown.edu>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.25.0"
failure = "0.1"
futures-util = "0.3.0"
hdrhistogram = "7"
mysql_async = "0.23.0"
num_cpus = "1"
rand = "0.7"
rand_distr = "0.2"
tokio = { version = "0.2.0", features = ["full"] }
tower-service = "0.3.0"
zipf = "6"

[lib]
path = "src/clients/lib.rs"

[[bin]]
name = "vote-benchmark"
path = "src/main.rs"

[package.metadata.raze]
workspace_path = "//cargo"
genmode = "Remote"

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
