load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "dstate",
    srcs = [
        "state.cc",
    ],
    hdrs = [
        "state.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":channel",
        ":graph",
        ":graph_partition",
        ":operator",
        ":record",
        ":schema",
        "//k9db/dataflow/ops:forward_view",
        "//k9db/sql:result",
        "//k9db/sqlast:ast",
        "//k9db/util:fs",
        "@glog",
    ],
)

cc_library(
    name = "channel",
    srcs = [
        "channel.cc",
    ],
    hdrs = [
        "channel.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":future",
        ":record",
        ":types",
    ],
)

cc_library(
    name = "schema",
    srcs = [
        "schema.cc",
    ],
    hdrs = [
        "schema.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":types",
        "//k9db/sqlast:ast",
        "@glog",
    ],
)

cc_library(
    name = "key",
    srcs = [
        "key.cc",
    ],
    hdrs = [
        "key.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":schema",
        ":types",
        "//k9db/sqlast:ast",
    ],
)

cc_library(
    name = "record",
    srcs = [
        "record.cc",
    ],
    hdrs = [
        "record.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":key",
        ":schema",
        ":types",
        "//k9db/policy:abstract_policy",
        "//k9db/sqlast:ast",
        "//k9db/util:type_utils",
        "@glog",
    ],
)

cc_library(
    name = "operator",
    srcs = [
        "operator.cc",
    ],
    hdrs = [
        "operator.h",
        "//k9db/dataflow/ops:benchmark_utils.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":future",
        ":operator_type",
        ":record",
        ":schema",
        ":types",
        "@com_google_googletest//:gtest_prod",
    ],
)

cc_library(
    name = "operator_type",
    srcs = [],
    hdrs = [
        "operator_type.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [],
)


cc_library(
    name = "types",
    srcs = [],
    hdrs = [
        "types.h",
    ],
    visibility = ["//k9db:__subpackages__"],
)

cc_library(
    name = "graph_partition",
    srcs = [
        "graph_partition.cc",
    ],
    hdrs = [
        "graph_partition.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":future",
        ":operator",
        ":record",
        ":types",
        "//k9db/dataflow/ops:forward_view",
        "//k9db/dataflow/ops:input",
        "//k9db/dataflow/ops:matview",
        "@glog",
    ],
)

cc_library(
    name = "graph",
    srcs = [
        "graph.cc",
        "graph_traversal.inc",
    ],
    hdrs = [
        "graph.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":channel",
        ":graph_partition",
        ":key",
        ":operator",
        ":record",
        ":schema",
        ":types",
        "//k9db/dataflow/ops:aggregate",
        "//k9db/dataflow/ops:equijoin",
        "//k9db/dataflow/ops:exchange",
        "//k9db/dataflow/ops:forward_view",
        "//k9db/dataflow/ops:input",
        "//k9db/dataflow/ops:matview",
        "//k9db/dataflow/ops:project",
        "//k9db/util:merge_sort",
        "@com_google_googletest//:gtest_prod",
        "@glog",
    ],
)

cc_library(
    name = "future",
    srcs = [
        "future.cc",
    ],
    hdrs = [
        "future.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        "@com_google_googletest//:gtest_prod",
        "@glog",
    ],
)

cc_test(
    name = "future-test",
    srcs = [
        "future_unittest.cc",
    ],
    deps = [
        ":future",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@glog",
    ],
)

cc_test(
    name = "key-test",
    srcs = [
        "key_unittest.cc",
    ],
    deps = [
        ":key",
        "//k9db/sqlast:ast",
        "//k9db/util:ints",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@glog",
    ],
)

cc_test(
    name = "record-test",
    srcs = [
        "record_unittest.cc",
    ],
    deps = [
        ":record",
        ":schema",
        ":types",
        "//k9db/sqlast:ast",
        "//k9db/util:ints",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@glog",
    ],
)

cc_test(
    name = "schema-test",
    srcs = [
        "schema_unittest.cc",
    ],
    deps = [
        ":schema",
        ":types",
        "//k9db/sqlast:ast",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@glog",
    ],
)

cc_test(
    name = "graph_partition-test",
    srcs = [
        "graph_partition_unittest.cc",
    ],
    deps = [
        ":graph_partition",
        ":record",
        ":schema",
        ":types",
        "//k9db/dataflow/ops:aggregate",
        "//k9db/dataflow/ops:equijoin",
        "//k9db/dataflow/ops:exchange",
        "//k9db/dataflow/ops:filter",
        "//k9db/dataflow/ops:input",
        "//k9db/dataflow/ops:matview",
        "//k9db/dataflow/ops:project",
        "//k9db/dataflow/ops:union",
        "//k9db/sqlast:ast",
        "//k9db/util:ints",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@glog",
    ],
)

cc_test(
    name = "graph-test",
    srcs = [
        "graph_unittest.cc",
    ],
    deps = [
        ":graph",
        ":graph_partition",
        ":operator",
        ":schema",
        ":types",
        "//k9db/dataflow/ops:exchange",
        "//k9db/dataflow/ops:matview",
        "//k9db/planner",
        "//k9db/sqlast:ast",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@glog",
    ],
)

# Used by the planner / java side of things.
filegroup(
    name = "generator_h",
    srcs = [
        "generator.h",
        "types.h",
        "//k9db/dataflow/ops:aggregate_enum.h",
        "//k9db/dataflow/ops:equijoin_enum.h",
        "//k9db/dataflow/ops:filter_enum.h",
        "//k9db/dataflow/ops:project_enum.h",
        "//k9db/sqlast:ast_schema_enums.h",
    ],
    visibility = ["//k9db:__subpackages__"],
)

cc_library(
    name = "generator",
    srcs = [
        "generator.cc",
    ],
    hdrs = [
        "generator.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":dstate",
        ":graph",
        ":key",
        ":operator",
        ":schema",
        ":types",
        "//k9db/dataflow/ops:aggregate",
        "//k9db/dataflow/ops:equijoin",
        "//k9db/dataflow/ops:filter",
        "//k9db/dataflow/ops:forward_view",
        "//k9db/dataflow/ops:input",
        "//k9db/dataflow/ops:matview",
        "//k9db/dataflow/ops:project",
        "//k9db/dataflow/ops:union",
        "//k9db/sqlast:ast",
        "@glog",
    ],
)
