load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")


cc_library(
    name = "policy_builder",
    srcs = [
        "policy_builder.cc",
    ],
    hdrs = [
        "policy_builder.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        "//k9db/sqlast:ast",
    ],
)

cc_library(
    name = "policy_engine",
    srcs = [
        "policy_engine.cc",
    ],
    hdrs = [
        "policy_engine.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":policy_builder",
        ":policy_state",
        "//k9db:connection",
        "//k9db/dataflow:dstate",
        "//k9db/dataflow:record",
        "//k9db/shards:state",
        "//k9db/shards:types",
        "//k9db/sqlast:ast",
        "//k9db/util:upgradable_lock",
        "@glog",
    ],
)

cc_library(
    name = "policy_state",
    srcs = [
        "policy_state.cc",
    ],
    hdrs = [
        "policy_state.h",
    ],
    visibility = ["//k9db:__subpackages__"],
    deps = [
        ":policy_builder",
    ],
)
