[package]
name = "mysql_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
msql-srv = "0.8.7"
slog = { version = "2.7.0" }
slog-term = "2.8.0"
gflags = "0.3.11"
regex = "0.2.11"
chrono = "0.4.19"

[build-dependencies]
bindgen = "0.32.2"

[[bin]]
name = "mysql_proxy"
path = "src/proxy.rs"

[lib]
name = "ffi"
path = "src/ffi.rs"

[package.metadata.raze]
workspace_path = "//k9db/proxy/cargo"
genmode = "Remote"
# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[package.metadata.raze.crates.bindgen.'0.32.2']
default_gen_buildrs = true
extra_aliased_targets = [
    "cargo_bin_bindgen"
]
